# gdbm

./: .gitignore  Makefile.am  NEWS  NOTE-WARNING  README  README-alpha  README-hacking  README_crash_tolerance.txt  THANKS  bootstrap  configure.ac  git2chg.awk
compat/: Makefile.am  close.c  dbm-priv.h  dbm.h  dbmclose.c  dbmdelete.c  dbmdirfno.c  dbmerr.c  dbmfetch.c  dbminit.c  dbmopen.c  dbmpagfno.c  dbmrdonly.c  dbmseq.c  dbmstore.c  delete.c  fetch.c  ndbm.h  seq.c  store.c
doc/: .gitignore  Makefile.am  fdl.texi  gdbm.3  gdbm.texi  gdbm_dump.1  gdbm_load.1  gdbmtool.1  gendocs.pl  gendocs.sh  htmlxref.cnf
fuzz/: build_seed.sh  gdbm_fuzzer.c  gdbm_fuzzer.rc
po/: Makevars  POTFILES.in
src/: .gitignore  Makefile.am  avail.c  base64.c  bucket.c  cachetree.c  datconv.c  debug.c  err.c  falloc.c  findkey.c  fullio.c  gdbm.h.in  gdbm.magic  gdbm_dump.c  gdbm_load.c  gdbmapp.h  gdbmclose.c  gdbmconst.h  gdbmcount.c  gdbmdefs.h  gdbmdelete.c  gdbmdump.c  gdbmerrno.c  gdbmexists.c  gdbmexp.c  gdbmfdesc.c  gdbmfetch.c  gdbmimp.c  gdbmload.c  gdbmopen.c  gdbmreorg.c  gdbmseq.c  gdbmsetopt.c  gdbmshell.c  gdbmstore.c  gdbmsync.c  gdbmtool.c  gdbmtool.h  gdbmtool.supp  (+21 more)
tests/: .gitignore  Makefile.am  atlocal.in  blocksize00.at  blocksize01.at  blocksize02.at  cloexec00.at  cloexec01.at  cloexec02.at  cloexec03.at  closerr.c  conv.at  create00.at  d_creat_ce.c  dbmcreate00.at  dbmcvt.at  dbmdel00.at  dbmdel01.at  dbmdel02.at  dbmfetch00.at  dbmfetch01.at  dbmfetch02.at  dbmfetch03.at  delete00.at  delete01.at  delete02.at  dtdel.c  dtdump.c  dtfetch.c  dtload.c  dump00.at  fdop.c  fetch00.at  fetch01.at  g_open_ce.c  g_reorg_ce.c  gdbmtool00.at  gdbmtool01.at  gdbmtool02.at  gdbmtool03.at  (+18 more)
tests/gdbmtool/: Makefile.am  base.exp
tests/gdbmtool/config/: default.exp
tools/: .gitignore  Makefile.am  datconv.c  err.c  gdbm_dump.c  gdbm_load.c  gdbmapp.h  gdbmshell.c  gdbmtool.c  gdbmtool.h  gram.y  input-argv.c  input-file.c  input-null.c  input-rl.c  input-std.c  lex.l  mem.c  parseopt.c  progname.c  util.c  var.c  wordwrap.c
